enable archetype-utilities by default within archetype

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -19,7 +19,7 @@
 // Sass Modular Scale
 @import "modular-scale";
 // Archetype
-//@import "archetype";
+@import "archetype";
 // Colorkit
 //@import "colorkit";
 
