--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -48,33 +48,37 @@
  * minor-third 5:6
  * major-second 8:9
  * minor-second 15:16
+ *
+ * 1. Default to $base-font-size 
  */
 
-$base-size: 16px;   /* default to $base-font-size */
+$base-size: 16px;                                     /* 1 */
 $ratio: fourth();
 
 
 /**
  * Compass Vertical Rhythm 
  * 
+ * 1. Set this false for px's
+ * 2. This is automaticly converted to 100% by compass
+ * 3. Establishes a baseline for $base-font-size
  */
 
-$relative-font-sizing : true;  // set false for px's
-$base-font-size: $base-size;   // this is automaticly converted to 100% by compass (1em)
-$base-line-height: 24px;       // this is automaticly converted to ems by compass (1.5em)
-
-// Establishes a baseline for the given font-size.
-@include establish-baseline($base-font-size);
+$relative-font-sizing : true;                         /* 2 */
+$base-font-size: $base-size;                          /* 2 */ 
+$base-line-height: 24px;
+@include establish-baseline($base-font-size);         /* 3 */
 
 /**
  * Typography Variables
+ *
+ * 1. Text Selection Highlight Color
+ * 2. Text Selection Highlight Color
  */
 
-/*Text Selection Highlight Color*/
-$selection-highlight-color:           #fe57a1;
+$selection-highlight-color:           #fe57a1;        /* 1 */
 $tap-highlight-color:                 black(75);
-/*Text Selection Highlight Color*/
-$selection-text-color:                $white;
+$selection-text-color:                $white;         /* 2 */
 
 
 /**
