--- a/sass/objects/_close-object.scss
+++ b/sass/objects/_close-object.scss
@@ -3,8 +3,10 @@
  * 
  */
 
-%close-object() {
+.close {
   position: absolute; 
   right: $close-position-right; 
   top: $close-position-top;  
+  &:hover { cursor: pointer; }
 }
+
