--- a/sass/objects/_nav-object.scss
+++ b/sass/objects/_nav-object.scss
@@ -7,7 +7,7 @@
 
 // @TODO:  %nav-object {...}  %vertical-nav-object {@extend nav-object; ...}
 
-%nav-object {
+.nav {
   list-style: none;
   margin-left: 0;                /////////vertical rythm????????
   padding-left: 0;  // disable default list padding
