added new --spacer variable in settings.scss to abstract spacer-unit out of media-object partial

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -92,13 +92,15 @@ $selection-text-color:                $white;         /* 2 */
 
 
 /**
- * Base Spacer Unit
+ * Spacer Units
  */
 $base-spacer-unit: $base-font-size;
 
 $half-spacer-unit: $base-spacer-unit / 2;
 $third-spacer-unit: $base-spacer-unit / 3;
 $quarter-spacer-unit: $base-spacer-unit / 4;
+
+$media--spacer: $half-spacer-unit;
 
 /**
  * Radius Unit
