fixed variable typo in _figures.scss

--- a/sass/base/_figures.scss
+++ b/sass/base/_figures.scss
@@ -12,7 +12,7 @@
       display: block;
       font-weight: normal;
       font-size: ms(-1);
-      color: $subtle-text-color;
+      color: $subtle-color--txt;
       font-family: $copy--body-text; 
     }
   }
