fixed variable typo in base/_quotes.scss

--- a/sass/base/_quotes.scss
+++ b/sass/base/_quotes.scss
@@ -6,7 +6,7 @@
   blockquote {
     font-family: $copy--accent-text;
     margin: $base-line-height, 40px;                        //ms() this
-    color: $subtle-text-color;
+    color: $subtle-color--txt;
     font-style: italic; 
     padding-left: 10px;
     border-left: 5px solid $subtle;
