added colorkit @import in _settings.scss

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -17,7 +17,7 @@
 @import "compass";                                 /* 1 */
 @import "modular-scale";                           /* 2 */
 @import "archetype";                               /* 3 */
-//@import "colorkit";                              /* 4 */
+@import "colorkit/colorkit";                       /* 4 */
 //@import "breakpoint";                            /* 5 */
 
 /**
