moved link color variables to _color-pallet.scss

--- a/sass/base/_color-pallet.scss
+++ b/sass/base/_color-pallet.scss
@@ -75,6 +75,18 @@ $muted-color--bg:                   $muted;
  * $brand-accent:;
  */
 
+
+/**
+ * Link Colors
+ * 
+ * (main type scope)
+ */
+$copy--link-color: blue;
+$copy--link-color-visited: purple;
+$copy--link-color-hover: red;
+$copy--link-color-focus: green;
+
+
 /**
  * UI and State Colors
  *
