--- a/sass/base/_links.scss
+++ b/sass/base/_links.scss
@@ -7,6 +7,8 @@
  */
 
 
+
+/*** @export "links" css */
 /**
  * Main Type Scope
  *
@@ -30,6 +32,8 @@
   }
 }
 
+
+/*** @export "external-links" css */
 /**
  * Identify External Links
  */
