--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -4,6 +4,7 @@
  */
 
 
+/*** @export "normalize-mixin" css */
 /**
  * Normalize Mixin
  *
@@ -22,6 +23,8 @@
 /* call normalize mixin */
 //@include normalize;
 
+
+/*** @export "additional-resets" css */
 /**
  * Global Resets
  *
