--- a/sass/components/_close.scss
+++ b/sass/components/_close.scss
@@ -4,6 +4,7 @@
  */
 
 
+/*** @export "close-variables" css */
 /**
  * Close Variables
  * 
@@ -19,6 +20,7 @@ $positive-close:                      light;    /* 1 */
 $negative-close:                      dark;     /* 1 */
 
 
+/*** @export "close-structure" css */
 /**
  * Close Structure
  *
@@ -38,6 +40,8 @@ $negative-close:                      dark;     /* 1 */
   top: 4px;  
 }
 
+
+/*** @export "close-skin" css */
 /**
  * Close Skin
  */
