--- a/sass/components/_partitions.scss
+++ b/sass/components/_partitions.scss
@@ -9,12 +9,13 @@
 1. vertical-rythm??
 2. ms() spacing*/
 
+
+/*** @export "partition-variables" css */
 /**
  * Partition Variables
  * 
  * 1. optionally rename structure and skin classes
  */
-
 
 /* partition Structure Namespace: */
 $small-partition:                     small;      /* 1 */
@@ -25,7 +26,7 @@ $primary-partition:                   primary;    /* 1 */
 $secondary-partition:                 secondary;  /* 1 */
 
 
-
+/*** @export "partition-structure" css */
 /**
  * Partition Structure
  *
@@ -54,6 +55,8 @@ $secondary-partition:                 secondary;  /* 1 */
   }
 }
 
+
+/*** @export "partition-skin" css */
 /**
  * Partition Skin
  */
