--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -49,6 +49,7 @@
 @import "components/close";
 @import "components/icons";
 @import "components/labels";
+@import "components/nav";
 @import "components/partitions";
 @import "components/spacers";
 @import "components/tabs";
