--- a/sass/base/_lists.scss
+++ b/sass/base/_lists.scss
@@ -1,51 +1,50 @@
 /**
- * List Styles
+ * Lists
  *
- * list styles are scoped. only 'default' values are those provided by the normalize reset
- * this is done to avoid repeatidly overridding
- * see: http://css-tricks.com/opt-in-typography/  &  http://anthonyshort.me/2012/05/global-typographic-styles-suck 
  */
+
 
 /**
  * List Variables
+ */
+$list-padding: 0 0 0 $base-line-height *2;
+$list-margin: 0 auto rhythm(1);
+$ul-style-type: disc;
+$ol-style-type: decimal;
+
+/**
+ * List Styles
  * 
  */
+li ul,
+li ol {
+  margin: $list-margin;
+}
 
+ul,
+ol {
+  margin: 0 auto rhythm(1);
+  padding: $list-padding;                   
+}
 
-/**
- * Primary Copy Scope
- */
-$copy--list-padding: 0 0 0 $base-line-height *2;
-$copy--list-margin: 0 auto rhythm(1);
-$copy--ul-style-type: disc;
-$copy--ol-style-type: decimal;
+ul {
+  list-style-type: $ul-style-type;
+}
 
-/**
- * Main Typography Scope
- */
-.#{$main-type-scope} {
-  li ul, li ol {
-    margin: $copy--list-margin;
-  }
-  ul, ol {
-    margin: 0 auto rhythm(1);
-    padding: $copy--list-padding;                   
-  }
-  ul {
-    list-style-type: $copy--ul-style-type;
-  }
-  ol {
-    list-style-type: $copy--ol-style-type;
-  }
-  dl {
-    margin: $copy--list-margin;
-  }
-  dl dt {
-    font-weight: bold;
-  }
-  dd {
-    margin: $copy--list-margin;
-    margin-left: $base-line-height * 2;
-  }
+ol {
+  list-style-type: $ol-style-type;
+}
+
+dl {
+  margin: $list-margin;
+}
+
+dl dt {
+  font-weight: bold;
+}
+
+dd {
+  margin: $list-margin;
+  margin-left: $base-line-height * 2;
 }
 
