clean up base/_code.scss partial

--- a/sass/base/_code.scss
+++ b/sass/base/_code.scss
@@ -1,5 +1,11 @@
 /**
  * Code
+ *
+ */
+
+/**
+ * Code Element Variables
+ * 
  */
 $copy--code-text:                     $monospace;
 
@@ -9,12 +15,11 @@ $copy--code-padding:                  0 3px;
 $copy--code-bg-color:                 $white(10);
 $copy--code-text-color:               lighten(red, 10%);
 
-/**
- * Pre
- */
-$copy--pre-margin:                    0 auto rhythm(1);
-$copy--pre-text:                      $copy--code-text;
 
+/**
+ * Code Element Styles
+ * 
+ */
 .#{$main-type-scope} {
   code {
     display: inline-block;
@@ -23,6 +28,21 @@ $copy--pre-text:                      $copy--code-text;
     color: $copy--code-text-color;
     padding: $copy--code-padding;
   }
+}
+
+
+/**
+ * Pre Element Variables
+ */
+$copy--pre-margin:                    0 auto rhythm(1);
+$copy--pre-text:                      $copy--code-text;
+
+
+/**
+ * Pre Element Styles
+ * 
+ */
+.#{$main-type-scope} {
   pre {
     margin: $copy--pre-margin;
   }
@@ -30,3 +50,4 @@ $copy--pre-text:                      $copy--code-text;
     font-family: $copy--pre-text;
   }
 }
+
