clean up base/_figures.scss partial

--- a/sass/base/_figures.scss
+++ b/sass/base/_figures.scss
@@ -1,19 +1,34 @@
 /**
- * Figure & Figcaption
+ * Figures
+ *
  */
 
+
+/**
+ * Figure Variables
+ */
+$copy--figure-margin:                         0 0 $base-line-height 0;
+$copy--figure-img-margin:                     0 0 $quarter-spacer-unit 0;
+$copy--figcaption-font-size:                  ms(-1);
+$copy--figcaption-color-txt:                  $subtle-color--txt;
+$copy--figcaption-font-family:                $copy--body-text;
+
+
+/**
+ * Figure Styles
+ */
 .#{$main-type-scope} {
   figure {
-    margin-bottom : $base-line-height; 
+    margin-bottom : $copy--figure-margin; 
     img {
-      margin-bottom : $base-line-height / 4;              // spacer unit this
+      margin-bottom : $copy--figure-img-margin;
     }
     figcaption {
       display: block;
       font-weight: normal;
-      font-size: ms(-1);
-      color: $subtle-color--txt;
-      font-family: $copy--body-text; 
+      font-size: $copy--figcaption-font-size;
+      color: $copy--figcaption-color-txt;
+      font-family: $copy--figcaption-font-family;
     }
   }
 }
