--- a/sass/base/_color-pallet.scss
+++ b/sass/base/_color-pallet.scss
@@ -24,7 +24,7 @@
  */
 $color-relationship: double-complementary;
 $base-color: red;
-//@include color-scheme($color-relationship, $base-color);
+@include color-scheme($color-relationship, $base-color);
 
 /**
  * Black and White
