--- a/sass/base/_code.scss
+++ b/sass/base/_code.scss
@@ -1,53 +1,34 @@
 /**
  * Code
  *
+ * Inline code and code block styles
+ * Scoped with $main-type-scope which is set in the base/_typography.scss partial
  */
-
-/**
- * Code Element Variables
- * 
- */
-$copy--code-text:                     $monospace;
-
-$copy--code-border-color:             white(20);
-$copy--code-border:                   1px solid $copy--code-border-color;  // var the border color
-$copy--code-padding:                  0 3px;
-$copy--code-bg-color:                 $white(10);
-$copy--code-text-color:               lighten(red, 10%);
 
 
 /**
- * Code Element Styles
- * 
+ * Inline Code
  */
 .#{$main-type-scope} {
   code {
     display: inline-block;
-    background: $copy--code-bg-color;
-    border: $copy--code-border;
-    color: $copy--code-text-color;
-    padding: $copy--code-padding;
+    background: white(10);
+    border: 1px solid white(20);
+    color: lighten(red, 10%);
+    padding: 0 3px;
+    font-family: $monospace;
   }
 }
 
-
 /**
- * Pre Element Variables
- */
-$copy--pre-margin:                    0 auto rhythm(1);
-$copy--pre-text:                      $copy--code-text;
-
-
-/**
- * Pre Element Styles
+ * Code Blocks
  * 
+ * 1. maintain vertical ryhthm after code blocks
  */
 .#{$main-type-scope} {
   pre {
-    margin: $copy--pre-margin;
-  }
-  pre, code, tt {
-    font-family: $copy--pre-text;
+    margin: 0 auto rhythm(1);                       /* 1 */
+    font-family: $monospace;
   }
 }
 
