--- a/sass/base/_quotes.scss
+++ b/sass/base/_quotes.scss
@@ -1,18 +1,21 @@
 /*** @export "quotes" css */
 /**
  * Blockquotes
+ *
+ * Blocksquotes are scoped with $main-type-scope which is set in the base/_typography.scss partial
+ *
+ * 1. right aligned blockquote
  */
 
 .#{$main-type-scope} {
   blockquote {
     font-family: $copy--accent-text;
-    margin: $base-line-height, 40px;                        //ms() this
+    margin: $base-line-height;
     color: $subtle-color--txt;
     font-style: italic; 
-    padding-left: 10px;
+    padding-left: 1em;
     border-left: 5px solid $subtle;
-      // right aligned blockquote 
-      &.right {
+      &.right {                                   /* 1 */
         float: right;
         padding-right: 10px;
         padding-left: 0;
